# final-project-mla

./: .breakpoints  README.md  dogbingresults.txt  doggoogleresults.txt  googlebingresults.txt  googlegoogleresults.txt  main.py  poopbingresults.txt  poopgoogleresults.txt  popbingresults.txt  popgoogleresults.txt  pyproject.toml  random_links.md  ukrainebingresults.txt  ukrainegoogleresults.txt
src/: controller (copy).py  controller.py  masterscraper.py  metabrowser.py  scraping.py  searchbar.py  setting.py
